syntax = "proto3";

option java_package = "com.logandhillon.typeofwar.networking.proto";
option java_outer_classname = "EndGameProto";

message PlayerStats {
  string playerName = 1;
  int32 team = 2;

  // player color
  float r = 3;
  float g = 4;
  float b = 5;

  // actual stats
  uint32 wpm = 6;
  uint32 accuracy = 7;
  uint32 words = 8;
}

message AllStats {
  uint32 winningTeam = 1;
  repeated PlayerStats stats = 2;
}